Fixing Nullbility issues

--- a/Anypic-iOS/Podfile
+++ b/Anypic-iOS/Podfile
@@ -5,7 +5,7 @@ workspace 'Anypic'
 pod 'Parse'
 pod 'ParseFacebookUtils'
 pod 'ParseCrashReporting'
-pod 'ParseUI'
+#pod 'ParseUI'
 pod 'MBProgressHUD'
 pod 'Reachability'
 pod 'FormatterKit'
